--- a/polls/templates/polls/contact_us.html
+++ b/polls/templates/polls/contact_us.html
@@ -59,9 +59,9 @@
 			<div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
 			  <ul class="navbar-nav">
 				<li><a href="/quick-tutor/">Home</a></li>
-				<li><a href="/quick-tutor/about">About</a></li>
 				<li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
-				<li><a href="/quick-tutor/chat">Join a Chat Room</a></li>
+				<li><a href="/quick-tutor/student_profile">Your Profile</a></li>
+
 	
 	
 	<!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
@@ -115,18 +115,11 @@
 			<div class="row justify-content-center align-items-center">
 				<div class="col-lg-12 banner-right">
 					<h1 class="text-white">
-						Contacts
+						Contact Us
 					</h1>
 					<p class="mx-auto text-white  mt-20 mb-40">
-						In the history of modern astronomy, there is probably no one greater leap forward than the building.
+						This website was created as a project for a software engineering course.
 					</p>
-					<div class="link-nav">
-						<span class="box">
-							<a href="index.html">Home </a>
-							<i class="lnr lnr-arrow-right"></i>
-							<a href="contacts.html">Contacts</a>
-						</span>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -137,16 +130,15 @@
 	<section class="contact-page-area section-gap">
 		<div class="container">
 			<div class="row">
-				<div class="map-wrap" style="width:100%; height: 445px;" id="map"></div>
 				<div class="col-lg-4 d-flex flex-column address-wrap">
 					<div class="single-contact-address d-flex flex-row">
 						<div class="icon">
 							<span class="lnr lnr-home"></span>
 						</div>
 						<div class="contact-details">
-							<h5>Binghamton, New York</h5>
+							<h5>Charlottesville, Virginia</h5>
 							<p>
-								4343 Hinkle Deegan Lake Road
+								University of Virginia
 							</p>
 						</div>
 					</div>
@@ -155,7 +147,7 @@
 							<span class="lnr lnr-phone-handset"></span>
 						</div>
 						<div class="contact-details">
-							<h5>00 (958) 9865 562</h5>
+							<h5>(123)-456-7890</h5>
 							<p>Mon to Fri 9am to 6 pm</p>
 						</div>
 					</div>
@@ -164,8 +156,8 @@
 							<span class="lnr lnr-envelope"></span>
 						</div>
 						<div class="contact-details">
-							<h5>support@colorlib.com</h5>
-							<p>Send us your query anytime!</p>
+							<h5>gohoos@virginia.com</h5>
+							<p>Not a real email.</p>
 						</div>
 					</div>
 				</div>
