--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -139,9 +139,7 @@
           <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
             <ul class="navbar-nav">
               <li><a href="/quick-tutor/">Home</a></li>
-              <li><a href="/quick-tutor/about">About</a></li>
               <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
-              <li><a href="/quick-tutor/chat">Join a Chat Room</a></li>
   
   
   <!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
@@ -219,8 +217,7 @@
             <div class="ml-20">
               <h4>Instant Help for Most UVA Classes</h4>
               <p>
-                We provide tutors for most, if not all undergraduate UVA classes, from Commerce to Computer Science and
-                Economics to English.
+                We provide tutors for most, if not all undergraduate UVA classes.
               </p>
             </div>
           </div>
@@ -229,9 +226,9 @@
           <div class="feature-item d-flex">
             <i class="ti-location-pin"></i>
             <div class="ml-20">
-              <h4>Real-Time GPS Tracking and Matching</h4>
+              <h4>Real-Time Matching</h4>
               <p>
-                We can match you up instantly, with live location updates and tutor finding.
+                We can match you up instantly, with a tutor of your choice. If you need to cancel, there's an option to do so.
               </p>
             </div>
           </div>
@@ -242,7 +239,7 @@
             <div class="ml-20">
               <h4>Built In Chat Room Feature</h4>
               <p>
-                Login to Classrooms and chat with other students that need help.
+                Login to to a tutor's chatroom and chat with tutors that can help.
               </p>
             </div>
           </div>
@@ -252,96 +249,6 @@
   </section>
   <!-- ================ End Feature Area ================= -->
 
- <!-- ================ Start Feature Area ================= -->
-  <section class="other-feature-area">
-    <div class="container">
-      <div class="feature-inner row">
-        <div class="col-lg-12">
-          <div class="section-title text-left">
-            <h2>
-              Tutors Available Now
-            </h2>
-            <p>
-              UVA Undergraduates and Graduate Students ready to match with you and help. At $10 an hour, it's a steal.
-            </p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="other-feature-item">
-            <i class="ti-desktop"></i>
-            <h4>Jaime P.</h4>
-            <div>
-              <p>
-                Hi! I'm Jaime Peng! I love computer science and math, and can help you with any CS class, any math class,
-                or any other intro engineering class!
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 mt--160">
-          <div class="other-feature-item">
-            <i class="ti-pie-chart"></i>
-            <h4>Emma L.</h4>
-            <div>
-              <p>
-               Hello, I am Emma Lehman, and I can help you with all of your economics classes! I am a third year econ major,
-                and have gotten A's in all my econ classes. Let me help ya!
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 mt--260">
-          <div class="other-feature-item">
-            <i class="ti-book"></i>
-            <h4>Norman B.</h4>
-            <div>
-              <p>
-                Hi all! My name is Norman Bates, and I am a third year english and history major. I can help with any english questions,
-                history, or alike!
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="other-feature-item">
-            <i class="ti-pulse"></i>
-            <h4>Muhammad J.</h4>
-            <div>
-              <p>
-                Greetings UVA! I am Muhammad Jones, and I am a foruth year pre-med student. I can help with any of the pre-med classses,
-                like O-Chem and Physics!
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 mt--160">
-          <div class="other-feature-item">
-            <i class="ti-desktop"></i>
-            <h4>Xia F.</h4>
-            <div>
-              <p>
-               Hi UVA. My Name is Xia Feng and I am a fourth year CS Major. I am also a TA for Algorithms and OS, and can help
-                with any CS class!
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 mt--260">
-          <div class="other-feature-item">
-            <i class="ti-briefcase"></i>
-            <h4>Kendall W.</h4>
-            <div>
-              <p>
-                Hello everyone! I am Kendall White, a third year pre-law and public policy major. Let me know if I can help
-                with any of these related classes!
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- ================ End Feature Area ================= -->
 
   <!-- ================ Start Video Area ================= -->
   <section class="video-area section-gap-bottom">
@@ -365,10 +272,10 @@
               <div class="video-part">
                 <img class="img-fluid" src="{% static '/polls/images/uva.jpg' %}" alt="">
 
-              <h4 class="text-white mb-20 mt-30">Rates start at $10/hour, and the higher ratings the tutors receive, the more money they can make!</h4>
+              <h4 class="text-white mb-20 mt-30">Rates are $10/hour, and payments are made via Venmo. If you don't have a Venmo, have cash ready!</h4>
               <p class="text-white mb-20">
-                Once you are matched, the tutor and you will both confirm that you are on the clock. You purchase time through the system,
-                and if you do not need the full time purchased, it is returned to your "stash" for later use on the app!
+                Once you are matched, the tutor has the ability to accept or deny your request, depending on if they feel comfortable with your assignment. 
+                If you get denied by one tutor, feel free to request another - there is no limit as to how many you can request!
               </p>
             </div>
 
@@ -505,48 +412,6 @@
   </section>
   <!-- ================ End Blog Post Area ================= -->
 
-   <!-- ================ Start Registration Area ================= -->
-  <section class="registration-area">
-    <div class="container">
-      <div class="row align-items-end">
-        <div class="col-lg-5">
-          <div class="section-title text-left text-white">
-            <h2 class="text-white">
-              Register Now!<br>
-              Be a student, tutor, or both.
-            </h2>
-            <p>
-             You can be paid by the hour, get to know other UVA students, and brush up on all your skills!
-            </p>
-          </div>
-        </div>
-        <div class="offset-lg-3 col-lg-4 col-md-6">
-          <div class="course-form-section">
-            <h3 class="text-white">Join Now</h3>
-            <p class="text-white">UVA is hard. We can help.</p>
-            <form class="course-form-area contact-page-form course-form text-right" id="myForm" action="mail.html" method="post">
-              <div class="form-group col-md-12">
-                <input type="text" class="form-control" id="name" name="name" placeholder="Name" onfocus="this.placeholder = ''"
-                 onblur="this.placeholder = 'Name'">
-              </div>
-              <div class="form-group col-md-12">
-                <input type="text" class="form-control" id="subject" name="subject" placeholder="Role" onfocus="this.placeholder = ''"
-                 onblur="this.placeholder = 'Phone Number'">
-              </div>
-              <div class="form-group col-md-12">
-                <input type="email" class="form-control" id="email" name="email" placeholder="Email Address" onfocus="this.placeholder = ''"
-                 onblur="this.placeholder = 'Email Address'">
-              </div>
-              <div class="col-lg-12 text-center">
-                <button class="btn text-uppercase">Submit</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- ================ End Registration Area ================= -->
 
 
   <!-- ================ start footer Area ================= -->
