--- a/polls/templates/polls/student_requests.html
+++ b/polls/templates/polls/student_requests.html
@@ -58,10 +58,8 @@
         <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li><a href="/quick-tutor/">Home</a></li>
-            <li><a href="/quick-tutor/about">About</a></li>
             <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
-            <li><a href="/quick-tutor/chat">Join a Chat Room</a></li>
-            <li><a href =  "/quick-tutor/student_profile>">My Account</a></li>
+            <li><a href =  "/quick-tutor/student_profile>">Your Profile</a></li>
 
 
 <!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
