--- a/polls/templates/polls/room.html
+++ b/polls/templates/polls/room.html
@@ -1,137 +1,309 @@
 <!DOCTYPE html>
+<html lang="zxx" class="no-js">
 
+{% load static %}
 {% load bootstrap4 %}
+<link rel="stylesheet"  href="{% static 'polls/availability-calendar.css' %}">
+<link rel="stylesheet"  href="{% static 'polls/bootstrap.css' %}">
+<link rel="stylesheet"  href="{% static 'polls/font-awesome.min.css' %}">
+<link rel="stylesheet"  href="{% static 'polls/hexagons.min.css' %}">
+<link rel="stylesheet"  href="{% static 'polls/ion.rangeSlider.css' %}">
+<link rel="stylesheet"  href="{% static 'polls/ion.rangeSlider.skinFlat.css' %}">
+<link rel="stylesheet"  href="{% static 'polls/jquerysctipttop.css' %}">
+<link rel="stylesheet"  href="{% static 'polls/linearicons.css' %}">
+<link rel="stylesheet"  href="{% static 'polls/magnific-popup.css' %}">
+<link rel="stylesheet"  href="{% static 'polls/main.css' %}">
+<link rel="stylesheet"  href="{% static 'polls/main.css.map' %}">
+<link rel="stylesheet"  href="{% static 'polls/nice-select.css' %}">
+<link rel="stylesheet"  href="{% static 'polls/owl.carousel.css' %}">
+<link rel="stylesheet"  href="{% static 'polls/static/polls/main.scss' %}">
 
-<html lang="en">
-        <header class="default-header">
-                <nav class="navbar navbar-expand-lg  navbar-light">
-                  <div class="container">
-            <!--        <a class="navbar-brand" href="index.html">-->
-            <!--        </a>-->
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="lnr lnr-menu"></span>
-                    </button>
-            
-                    <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
-                      <ul class="navbar-nav">
-                        <li><a href="/quick-tutor/">Home</a></li>
-                        <li><a href="/quick-tutor/about">About</a></li>
-                        <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
-                        <li><a href="/quick-tutor/chat">Join a Chat Room</a></li>
-            
-            
-            <!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
-                        {% if user.is_authenticated %}
-                            <li class="nav-item">
-                                <a class="nav-link disabled" href=""><p>Logged in as: {{ user.username }}</p><span class="sr-only">(current)</span></a>
-                            </li>
-            
-                        <a class="nav-link" href="{% url 'logout' %}">Logout<span class="sr-only">(current)</span></a>
-                        {% else %}
-                                <li><a href="{% url 'social:begin' 'google-oauth2' %}">Login/Register</a></li>
-                            </a>
-                        {% endif %}
-                    </li>
-            
-            
-            
-                        <li><a href="/quick-tutor/contact_us/">Contact Us</a></li>
-            
-                        <li>
-                          <button class="search" >
-                            <span class="lnr lnr-magnifier"></span>
-                          </button>
-            
-            
-            
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </nav>
-            
-            <!--<div class="search-input" id="search-input-box">-->
-            <!--      <div class="container">-->
-            
-            <!--        <form class="d-flex justify-content-between">-->
-            <!--          <input type="text" class="form-control" id="search-input" placeholder="Search Here" />-->
-            <!--&lt;!&ndash;          <button class="navbar-toggle" type="submit" data-toggle="collapse" data-target="bs-navbar-collapse" ></button>&ndash;&gt;-->
-            <!--          <button type="submit" class="btn"></button>-->
-            <!--          <span class="lnr lnr-cross" id="close-search" title="Close Search"></span>-->
-            <!--        </form>-->
-            <!--      </div>-->
-            <!--    </div>-->
-              </header>
+<head>
+  <!-- Mobile Specific Meta -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="img/fav.png" />
+  <!-- Author Meta -->
+  <meta name="author" content="colorlib" />
+  <!-- Meta Description -->
+  <meta name="description" content="" />
+  <!-- Meta Keyword -->
+  <meta name="keywords" content="" />
+  <!-- meta character set -->
+  <meta charset="UTF-8" />
+  <!-- Site Title -->
+  <title>Courses</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Roboto:400,400i,500,700" rel="stylesheet" />
+  <!--
+      CSS
+      =============================================
+    -->
+
+</head>
+
+<body>
+ <!-- ================ Start Header Area ================= -->
+ <header class="default-header">
+  <nav class="navbar navbar-expand-lg  navbar-light">
+    <div class="container">
+<!--        <a class="navbar-brand" href="index.html">-->
+<!--          <img src="{% static '/polls/images/qt_logo.png' %}" alt="" />-->
+<!--        </a>-->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="lnr lnr-menu"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li><a href="/quick-tutor/">Home</a></li>
+          <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
+          <li><a href="/quick-tutor/student_profile">Your Profile</a></li>
 
 
 
+<!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
+          {% if user.is_authenticated %}
+              <li class="nav-item">
+                  <a class="nav-link disabled" href=""><p>Logged in as: {{ user.username }}</p><span class="sr-only">(current)</span></a>
+              </li>
+
+          <a class="nav-link" href="{% url 'logout' %}">Logout<span class="sr-only">(current)</span></a>
+          {% else %}
+                  <li><a href="{% url 'social:begin' 'google-oauth2' %}">Login/Register</a></li>
+              </a>
+          {% endif %}
+      </li>
 
 
-              <head>
-                    <meta charset="utf-8"/>
-                    <title>Chat Room</title>
-                </head>
-                <body>
-                    <textarea id="chat-log" cols="100" rows="20"></textarea><br>
-                    <input id="chat-message-input" type="text" size="100"><br>
-                    <input id="chat-message-submit" type="button" value="Send">
-                    {{ room_name|json_script:"room-name" }}
-                    <script>
-                        const roomName = JSON.parse(document.getElementById('room-name').textContent);
-                
-                        const chatSocket = new WebSocket(
-                            'ws://'
-                            + window.location.host
-                            + '/ws/chat/'
-                            + roomName
-                            + '/'
-                        );
-                
-                        chatSocket.onmessage = function(e) {
-                            const data = JSON.parse(e.data);
-                            document.querySelector('#chat-log').value += (data.message + '\n');
-                        };
-                
-                        chatSocket.onclose = function(e) {
-                            console.error('Chat socket closed unexpectedly');
-                        };
-                
-                        document.querySelector('#chat-message-input').focus();
-                        document.querySelector('#chat-message-input').onkeyup = function(e) {
-                            if (e.keyCode === 13) {  // enter, return
-                                document.querySelector('#chat-message-submit').click();
-                            }
-                        };
-                
-                        document.querySelector('#chat-message-submit').onclick = function(e) {
-                            const messageInputDom = document.querySelector('#chat-message-input');
-                            const message = messageInputDom.value;
-                            chatSocket.send(JSON.stringify({
-                                'message': message
-                            }));
-                            messageInputDom.value = '';
-                        };
-                    </script>
-       <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
-</div>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+          <li><a href="/quick-tutor/contact_us/">Contact Us</a></li>
 
-    <title>Suggest Another Poll</title>
-  </head>
+          <li>
+            <button class="search" >
+              <span class="lnr lnr-magnifier"></span>
+            </button>
 
-</form>
+
+
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+<!--<div class="search-input" id="search-input-box">-->
+<!--      <div class="container">-->
+
+<!--        <form class="d-flex justify-content-between">-->
+<!--          <input type="text" class="form-control" id="search-input" placeholder="Search Here" />-->
+<!--&lt;!&ndash;          <button class="navbar-toggle" type="submit" data-toggle="collapse" data-target="bs-navbar-collapse" ></button>&ndash;&gt;-->
+<!--          <button type="submit" class="btn"></button>-->
+<!--          <span class="lnr lnr-cross" id="close-search" title="Close Search"></span>-->
+<!--        </form>-->
+<!--      </div>-->
+<!--    </div>-->
+</header>
+  <!-- ================ End Header Area ================= -->
+
+  <!-- ================ start banner Area ================= -->
+  <section class="banner-area">
+      <div class="container">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-lg-12 banner-right">
+            <h1 class="text-white">
+              Chat with Your Tutor
+            </h1>
+            <p class="mx-auto text-white  mt-20 mb-40">
+              If you have a quick question, send it to your tutor here. <br />
+              If your question is longer though, we encourage you to wait for your tutor!
+            </p>
+ 
+          </div>
+        </div>
+      </div>
+    </section>
+  <!-- ================ End banner Area ================= -->
+
+  <!-- ================ Start Popular Course Area ================= -->
+  <section class="popular-course-area section-gap">
+    <div class="container-fluid">
+      <div class="row justify-content-center section-title">
+        <div class="col-lg-12">
+            <h2 style = text-align:left>Chat Room</h2>
+
+                <head>
+                        <meta charset="utf-8"/>
+                        <title>Chat Room</title>
+                    </head>
+                    <body>
+                        <textarea id="chat-log" cols="100" rows="20"></textarea><br>
+                        <input id="chat-message-input" type="text" size="100"><br>
+                        <input id="chat-message-submit" type="button" value="Send">
+                        {{ room_name|json_script:"room-name" }}
+                        <script>
+                            const roomName = JSON.parse(document.getElementById('room-name').textContent);
+                    
+                            const chatSocket = new WebSocket(
+                                'ws://'
+                                + window.location.host
+                                + '/ws/chat/'
+                                + roomName
+                                + '/'
+                            );
+                    
+                            chatSocket.onmessage = function(e) {
+                                const data = JSON.parse(e.data);
+                                document.querySelector('#chat-log').value += (data.message + '\n');
+                            };
+                    
+                            chatSocket.onclose = function(e) {
+                                console.error('Chat socket closed unexpectedly');
+                            };
+                    
+                            document.querySelector('#chat-message-input').focus();
+                            document.querySelector('#chat-message-input').onkeyup = function(e) {
+                                if (e.keyCode === 13) {  // enter, return
+                                    document.querySelector('#chat-message-submit').click();
+                                }
+                            };
+                    
+                            document.querySelector('#chat-message-submit').onclick = function(e) {
+                                const messageInputDom = document.querySelector('#chat-message-input');
+                                const message = messageInputDom.value;
+                                chatSocket.send(JSON.stringify({
+                                    'message': message
+                                }));
+                                messageInputDom.value = '';
+                            };
+                        </script>    
+  </section>
+  <!-- ================ End Popular Course Area ================= -->
+<script>
+// Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+var submitBtn = document.getElementById("submitBtn")
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+submitBtn.onclick = function(){
+modal.style.display = "none"
+}
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script>
+ 
+
+  <!-- ================ start footer Area ================= -->
+  <footer class="footer-area section-gap">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-2 col-md-6 single-footer-widget">
+					<h4>Top Products</h4>
+					<ul>
+						<li><a href="#">Managed Website</a></li>
+						<li><a href="#">Manage Reputation</a></li>
+						<li><a href="#">Power Tools</a></li>
+						<li><a href="#">Marketing Service</a></li>
+					</ul>
+				</div>
+				<div class="col-lg-2 col-md-6 single-footer-widget">
+					<h4>Quick Links</h4>
+					<ul>
+						<li><a href="#">Jobs</a></li>
+						<li><a href="#">Brand Assets</a></li>
+						<li><a href="#">Investor Relations</a></li>
+						<li><a href="#">Terms of Service</a></li>
+					</ul>
+				</div>
+				<div class="col-lg-2 col-md-6 single-footer-widget">
+					<h4>Features</h4>
+					<ul>
+						<li><a href="#">Jobs</a></li>
+						<li><a href="#">Brand Assets</a></li>
+						<li><a href="#">Investor Relations</a></li>
+						<li><a href="#">Terms of Service</a></li>
+					</ul>
+				</div>
+				<div class="col-lg-2 col-md-6 single-footer-widget">
+					<h4>Resources</h4>
+					<ul>
+						<li><a href="#">Guides</a></li>
+						<li><a href="#">Research</a></li>
+						<li><a href="#">Experts</a></li>
+						<li><a href="#">Agencies</a></li>
+					</ul>
+				</div>
+				<div class="col-lg-4 col-md-6 single-footer-widget">
+					<h4>Newsletter</h4>
+					<p>You can trust us. we only send promo offers,</p>
+					<div class="form-wrap" id="mc_embed_signup">
+						<form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+						 method="get" class="form-inline">
+							<input class="form-control" name="EMAIL" placeholder="Your Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email Address '"
+							 required="" type="email">
+							<button class="click-btn btn btn-default text-uppercase">subscribe</button>
+							<div style="position: absolute; left: -5000px;">
+								<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+							</div>
+
+							<div class="info"></div>
+						</form>
+					</div>
+				</div>
+			</div>
+			<div class="footer-bottom row align-items-center">
+				<p class="footer-text m-0 col-lg-8 col-md-12">
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+				<div class="col-lg-4 col-md-12 footer-social">
+					<a href="#"><i class="fa fa-facebook"></i></a>
+					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="#"><i class="fa fa-dribbble"></i></a>
+					<a href="#"><i class="fa fa-behance"></i></a>
+				</div>
+			</div>
+		</div>
+	</footer>
+  <!-- ================ End footer Area ================= -->
+
+  <script src="js/vendor/jquery-2.2.4.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+    crossorigin="anonymous"></script>
+  <script src="js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+  <script src="js/jquery.ajaxchimp.min.js"></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
+  <script src="js/parallax.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/jquery.sticky.js"></script>
+  <script src="js/hexagons.min.js"></script>
+  <script src="js/jquery.counterup.min.js"></script>
+  <script src="js/waypoints.min.js"></script>
+  <script src="js/jquery.nice-select.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
+
 </html>
 
 
