--- a/polls/templates/polls/tutor_match.html
+++ b/polls/templates/polls/tutor_match.html
@@ -101,9 +101,8 @@
       <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li><a href="/quick-tutor/">Home</a></li>
-          <li><a href="/quick-tutor/about">About</a></li>
           <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
-          <li><a href="/quick-tutor/chat">Join a Chat Room</a></li>
+          <li><a href="/quick-tutor/student_profile">Your Profile</a></li>
 
 
 <!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
@@ -159,62 +158,16 @@
               Who's Available?
             </h1>
             <p class="mx-auto text-white  mt-20 mb-40">
-              In the history of modern astronomy, there is probably no one greater leap forward than the building.
+              Check out a list of tutors that are available.
             </p>
-            <div class="link-nav">
-              <span class="box">
-                <a href="index.html">Home </a>
-                <i class="lnr lnr-arrow-right"></i>
-                <a href="courses.html">Courses</a>
-              </span>
-            </div>
+          
           </div>
         </div>
       </div>
     </section>
   <!-- ================ End banner Area ================= -->
 
-  <!-- ================ Start Feature Area ================= -->
-  <section class="feature-area">
-    <div class="container-fluid">
-      <div class="feature-inner row">
-        <div class="col-lg-2 col-md-6">
-          <div class="feature-item d-flex">
-            <i class="ti-book"></i>
-            <div class="ml-20">
-              <h4>New Classes</h4>
-              <p>
-                In the history of modern astronomy, there is probably no one greater leap forward.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-6">
-          <div class="feature-item d-flex">
-            <i class="ti-cup"></i>
-            <div class="ml-20">
-              <h4>Top Courses</h4>
-              <p>
-                In the history of modern astronomy, there is probably no one greater leap forward.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-6">
-          <div class="feature-item d-flex border-right-0">
-            <i class="ti-desktop"></i>
-            <div class="ml-20">
-              <h4>Full E-Books</h4>
-              <p>
-                In the history of modern astronomy, there is probably no one greater leap forward.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- ================ End Feature Area ================= -->
+
 
   <!-- ================ Start Popular Course Area ================= -->
   <section class="popular-course-area section-gap">
@@ -222,8 +175,8 @@
       <div class="row justify-content-center section-title">
         <div class="col-lg-12">
           <h2>
-            Tutors <br />
-            Available Right Now
+            Tutors Available<br />
+            Right Now
           </h2>
         </div>
       </div>
@@ -239,7 +192,7 @@
             <div class="d-flex justify-content-between mb-20">
               <p class="name">{{student.location}}</p>
               <p class="value">$10, Venmo: {{student.venmo}}</p>
-              <a href="{% url 'quick-tutor:add_student' student.user.id %}"> Click HERE to request tutor</a>
+              <!-- <a href="{% url 'quick-tutor:add_student' student.user.id %}"> Click HERE to request tutor</a> -->
               <button id="myBtn"> click here to request tutor</button>
 
               <div id="myModal" class="modal">
@@ -255,7 +208,7 @@
                           {% csrf_token %}
                           <p class = "name" > Tutor Selected:{{ student.preferred_name }}</p>
                           <p class = "name"> Price: $10 to {{student.venmo}}</p>
-                          <label for = "tutor_subject"> What subject do you need help with?</label><br>
+                          <label for = "tutor_subject"> What subject and assignment do you need help with?</label><br>
                           <input type = "text" id="tutor_subject" name = "tutor_subject"><br>
                           <label for = "tutor_additional">Additional Notes</label><br>
                           <input type = "text" id = "tutor_additional" name = "tutor_additional"><br>
@@ -272,9 +225,7 @@
               </div>
 
 
-              <a href="/quick-tutor/tutor_match/error">
                 <h4>{{student.preferred_name}} -- {{student.skills}} </h4>
-              </a>
   
             <div class="bottom d-flex mt-15">
               <ul class="list">
@@ -290,7 +241,7 @@
         {% endif %}
         {% endfor %}
         {% else %}
-        <p>No people are available.</p>
+        <p>No tutors are available.</p>
         {% endif %}
 
         </div>
@@ -329,157 +280,7 @@ window.onclick = function(event) {
   }
 }
 </script>
-  <!-- ================ Start Registration Area ================= -->
-  <section class="registration-area">
-    <div class="container">
-      <div class="row align-items-end">
-        <div class="col-lg-5">
-          <div class="section-title text-left text-white">
-            <h2 class="text-white">
-              Watch Our Trainers <br>
-              in Live Action
-            </h2>
-            <p>
-              If you are looking at blank cassettes on the web, you may be
-              very confused at the difference in price. You may see some for
-              as low as $.17 each.
-            </p>
-          </div>
-        </div>
-        <div class="offset-lg-3 col-lg-4 col-md-6">
-          <div class="course-form-section">
-            <h3 class="text-white">Courses for Free</h3>
-            <p class="text-white">It is high time for learning</p>
-            <form class="course-form-area contact-page-form course-form text-right" id="myForm" action="mail.html" method="post">
-              <div class="form-group col-md-12">
-                <input type="text" class="form-control" id="name" name="name" placeholder="Name" onfocus="this.placeholder = ''"
-                 onblur="this.placeholder = 'Name'">
-              </div>
-              <div class="form-group col-md-12">
-                <input type="text" class="form-control" id="subject" name="subject" placeholder="Phone Number" onfocus="this.placeholder = ''"
-                 onblur="this.placeholder = 'Phone Number'">
-              </div>
-              <div class="form-group col-md-12">
-                <input type="email" class="form-control" id="email" name="email" placeholder="Email Address" onfocus="this.placeholder = ''"
-                 onblur="this.placeholder = 'Email Address'">
-              </div>
-              <div class="col-lg-12 text-center">
-                <button class="btn text-uppercase">Submit</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- ================ End Registration Area ================= -->
-
-  <!-- ================ Start Feature Area ================= -->
-  <section class="other-feature-area">
-      <div class="container">
-        <div class="feature-inner row">
-          <div class="col-lg-12">
-            <div class="section-title text-left">
-              <h2>
-                Features That <br />
-                Can Avail By Everyone
-              </h2>
-              <p>
-                If you are looking at blank cassettes on the web, you may be
-                very confused at the difference in price. You may see some for
-                as low as $.17 each.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="other-feature-item">
-              <i class="ti-key"></i>
-              <h4>Lifetime Access</h4>
-              <div>
-                <p>
-                  Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                  do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                  amet consec tetur adipisicing elit, sed do eiusmod tempor
-                  incididunt labore.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mt--160">
-            <div class="other-feature-item">
-              <i class="ti-files"></i>
-              <h4>Source File Included</h4>
-              <div>
-                <p>
-                  Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                  do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                  amet consec tetur adipisicing elit, sed do eiusmod tempor
-                  incididunt labore.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mt--260">
-            <div class="other-feature-item">
-              <i class="ti-medall-alt"></i>
-              <h4>Student Membership</h4>
-              <div>
-                <p>
-                  Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                  do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                  amet consec tetur adipisicing elit, sed do eiusmod tempor
-                  incididunt labore.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="other-feature-item">
-              <i class="ti-briefcase"></i>
-              <h4>35000+ Courses</h4>
-              <div>
-                <p>
-                  Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                  do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                  amet consec tetur adipisicing elit, sed do eiusmod tempor
-                  incididunt labore.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mt--160">
-            <div class="other-feature-item">
-              <i class="ti-crown"></i>
-              <h4>Expert Mentors</h4>
-              <div>
-                <p>
-                  Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                  do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                  amet consec tetur adipisicing elit, sed do eiusmod tempor
-                  incididunt labore.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mt--260">
-            <div class="other-feature-item">
-              <i class="ti-headphone-alt"></i>
-              <h4>Live Supports</h4>
-              <div>
-                <p>
-                  Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed
-                  do eiusmod tempor incididunt labore. Lorem ipsum dolor sit
-                  amet consec tetur adipisicing elit, sed do eiusmod tempor
-                  incididunt labore.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ================ End Feature Area ================= -->
-
+  
   <!-- ================ start footer Area ================= -->
   <footer class="footer-area section-gap">
 		<div class="container">
