--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -140,7 +140,7 @@
             <ul class="navbar-nav">
               <li><a href="/quick-tutor/">Home</a></li>
               <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
-  
+  		<li><a href="https://chat-site6.herokuapp.com/">Chat with a Tutor</a></li>
   
   <!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
               {% if user.is_authenticated %}
