--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -16,9 +16,7 @@
       <li class="nav-item">
          <a class="nav-link" href="/quick-tutor/">Find a Tutor<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-          <a class="nav-link" href="/quick-tutor/chat">Chat<span class="sr-only">(current)</span></a>
-       </li>
+      <li><a href="https://chat-site6.herokuapp.com/">Chat with a Tutor</a></li>
         <li class="nav-item">
          <a class="nav-link" href="/quick-tutor/suggestions">Other Tab (ToDo)<span class="sr-only">(current)</span></a>
         </li>
