--- a/polls/templates/polls/tutor_match.html
+++ b/polls/templates/polls/tutor_match.html
@@ -102,6 +102,7 @@
         <ul class="navbar-nav">
           <li><a href="/quick-tutor/">Home</a></li>
           <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
+		<li><a href="https://chat-site6.herokuapp.com/">Chat with a Tutor</a></li>
           <li><a href="/quick-tutor/student_profile">Your Profile</a></li>
 
 
