--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -140,6 +140,8 @@
             <ul class="navbar-nav">
               <li><a href="/quick-tutor/">Home</a></li>
               <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
+              <li><a href="/quick-tutor/student_profile">Your Profile</a></li>
+              
   
   
   <!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
@@ -239,7 +241,7 @@
             <div class="ml-20">
               <h4>Built In Chat Room Feature</h4>
               <p>
-                Login to to a tutor's chatroom and chat with tutors that can help.
+                  Login to a chatroom and share the link with your tutor to get help via chat.
               </p>
             </div>
           </div>
