added more info on the templates and updated url paths

--- a/polls/templates/polls/student_requests.html
+++ b/polls/templates/polls/student_requests.html
@@ -210,7 +210,7 @@
 
               </ul>
               <div class="d-flex justify-content-between mb-20">
-              <p class="ml-20"><a href="{% url 'quick-tutor:cancel_ontutor' t_request.id %}">Click here to cancel</a></p>
+              <p class="ml-20"><a href="{% url 'quick-tutor:student_cancel' t_request.id %}">Click here to cancel</a></p>
 
 
             </div>
