--- a/polls/templates/polls/confrim_update_request.html
+++ b/polls/templates/polls/confrim_update_request.html
@@ -61,7 +61,7 @@
             <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
             <li><a href="/quick-tutor/student_profile">Your Profile</a></li>
 
- 
+
 
 
 <!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
@@ -113,11 +113,19 @@
       <div class="container">
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-12 banner-right">
+              {% if status == Accepted %}
             <h1 class="text-white">
-              Your request has been cancelled.
+              Success! You have {{ status }} this Request.
             </h1>
-            <p class="mx-auto text-white  mt-20 mb-40"><a class = "nav-link" href="quick-tutor/tutor_match" style = "color:white"></a>
-              Feel free to request another tutor, if needed.
+              {% else %}
+            <h1 class="text-white">
+              Success! You have {{ status }} this Request.
+            </h1>
+              <p class="mx-auto text-white  mt-20 mb-40">
+                We will let the student know you have denied their request.
+              </p>
+            <p class="mx-auto text-white  mt-20 mb-40"><a class = "nav-link" href="quick-tutor/tutor_requests" style = "color:white"></a>
+              My Tutor Request Page
             </p>
           </div>
         </div>
@@ -125,7 +133,7 @@
     </section>
   <!-- ================ End banner Area ================= -->
 
- 
+
 
   <!-- ================ start footer Area ================= -->
   <footer class="footer-area section-gap">
